moviemovie/assets/css/main.css
* { 
    font-family: 'Lato', sans-serif;
} 

body { 
    /*padding-top: 70px; */
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 300;
}

p { 
    margin-bottom: 30px;
}

.navbar {
    /* Fallback for web browsers that don't support RGBa */
    background-color: rgb(0, 0, 0);
    /* RGBa with 0.6 opacity */
    background-color: rgba(0, 0, 0, 0.7);
    border-bottom: none;
}
button.navbar-toggle {
    border: none;
}

.navbar:hover {
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
}

.navbar-inverse .navbar-nav > .active > a{
    background-color: rgba(0, 0, 0, 0.3);
}

.navbar-inverse .navbar-nav > .active > a:hover{
    background-color: rgba(0, 0, 0, 0.4);
}

section {
    padding-top: 40px;
    padding-bottom: 60px;
}

.hovereffect {
  width: 100%;
  height: 100%;
  float: left;
  overflow: hidden;
  position: relative;
  text-align: center;
  cursor: default;
}

.hovereffect .overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
}

.hovereffect img {
  display: block;
  position: relative;
  /*-webkit-transition: all 0.4s ease-in;
  transition: all 0.4s ease-in;*/
}

.hovereffect h2 {
  text-transform: uppercase;
  text-align: center;
  position: relative;
  font-size: 15px;
  padding: 10px;
  background: rgba(0, 0, 0, 0.6);
}

.hovereffect h2 {
  /*-webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
  -webkit-transition: all 0.4s ease-in;
  transition: all 0.4s ease-in;*/
  opacity: 0;
  filter: alpha(opacity=0);
  color: #ffffff;
  text-transform: uppercase;
}

.hovereffect:hover h2 {
  opacity: 1;
  filter: alpha(opacity=100);
  /*-webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);*/
}

header {
    background-color: #b3b3b3;
    text-align: center;
    -webkit-transition: background-color 2s; /* Safari */
    transition: background-color 2s;
}

header:hover {
    background-color: #000000;
}



.release_date {
    color: #cccccc;
    font-size: 0.7em;
    padding: 2px;
}

.no-padding {
    padding: 0;
    
}

.movie-div {
    /*width: 320px*/
    width: 100%;
    height: 75px;
    overflow: hidden;
}


@media (min-width: 375px) {
  .movie-div {
        height: 87px;
  }    
}

@media (min-width: 414px) {
  .movie-div {
        height: 97px;
  }    
}

@media (min-width: 528px) {
  .movie-div {
        height: 130px;
  }    
}

@media (min-width: 600px) {
  .movie-div {
        height: 142px;
  }    
}

@media (min-width: 768px) {
  .movie-div {
        height: 177px;
  }
}

@media (min-width: 992px) {
    .movie-div {
       height: 228px;
    }
}

@media (min-width: 1200px) {
    .movie-div {
       height: 275px;
    }
}

/*Search section*/

input#searchBox {
    font-size: 0.5em;
    box-sizing: border-box;
    padding: 5px 10px;
    border: 3px solid #b3b3b3;
    transition: 0.5s;
    background: #ffffff;
    color: #b3b3b3;
    border-radius: 0;
}

input#searchBox:focus {
    outline-width: 0;
    /*color: #ffffff;
    background: #b3b3b3;*/
}

/*input#searchBox:hover {
    color: #ffffff;
    background: #b3b3b3;
}*/

button[id="search-by-title-button submit"] {
    box-sizing: border-box;
    font-size: 0.5em;
    padding: 5px 10px;
    color: #ffffff;
    background: #b3b3b3;
    border-radius: 0;
    border: 3px solid #b3b3b3;
}

button[id="search-by-title-button submit"]:hover {
    outline-width: 0;
    color: #b3b3b3;
    background: #ffffff;
    border: 3px solid #b3b3b3;

}

#no-display {
    display: none;
}

.search-image {
    display: block;
    width: 100%;
    text-align: center;
    background: no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    -webkit-transition: all 0.4s ease-in;
    transition: all 0.4s ease-in;  
    overflow: hidden;
    
}

.search-image:hover {
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.7); 
}

.searchline h2 {
    font-size: 3em;
    color: #ffffff;
}

.clickable {
    cursor: pointer;
}

/*movie-detail.template.html*/

.centered {
    text-align: center;
}

.header-image {
    display: block;
    width: 100%;
    text-align: center;
    background: no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    -webkit-transition: all 0.2s ease-in;
}

.header-image:hover {
    -moz-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
    -o-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
    -webkit-filter: grayscale(100%);
    filter: #000000;
    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");

}

.headline {
    padding: 120px 0;
}

.headline h1 {
    font-size: 5em;
    color: #ffffff;
}

.headline h2 {
    font-size: 2em;
    color: #ffffff;
}

.vote-count {
    float: right;
}

.margin-bottom {
    margin-bottom: 30px;
}

.img-hover:hover {
    opacity: 0.8;
}

ul.no-style {
    padding: 0;
    list-style-type: none;
}

footer {
    color: #bfbfbf;
}

